fixed navbar bug (Logo not showing)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -317,8 +317,3 @@ a.text-secondary {
     margin: 10px;
     transition: transform 0.3s ease;
 }
-
-#anchorhidden {
-    color: #253462 0%;
-    margin-left: -100px;
-}
